--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="about-us">
         <div class="container">
                 <p class="about-us-text">
-                    At unknwn, we perform high-end IT</br> and digital solutions by using neoteric development approaches and user-oriented designs.</br></br>
+                    At unknwn, we perform high-end IT and digital solutions by using neoteric development approaches and user-oriented designs.</br></br>
         We do <span class="color">single page applications,  website construction, hard ware integrations, mobile applications, cross-platform apps</span> and things you even about Unknwn
                 </p>
         </div>
@@ -62,9 +62,9 @@
     <section class="unknwn-team">
         <div class="container">
             <h1 class="team-logo">unknwn</h1>
-            <div class="team-text">
+            <h2 class="team-text">
                 Every project unknwn deliver is the outcome</br> of our team’s collaboration. Over the years we came</br> to a paradigm that every business has to be digitalised, no matter if it’s a local or global.
-            </div>
+            </h2>
             <div class="team-profile">
                 <div class="user-profile">
                     <img src="pics/image 22.svg" alt="" class="user-pic"></img>
