--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
         </nav>
         <div class="intro">
-            <div class="intro-logo">unknwn</div>
-            <div class="text-intro">no chance against us</div>
+            <img src="pics/Unknwnv1.png" alt="" class="unknwn"></img>
+            
         </div>
     </header>
 
@@ -127,7 +127,7 @@
     
         <section class="footer">
             <div class="end">
-                <div class="end-logo">unknwn</div>
+                <img src="/pics/Unknwn.svg" alt="" class="unknwn">
             </div>
             <nav class="nav-end">
                 <div class="left-menu">
